Prevent horizontal scrolling

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -855,7 +855,8 @@ html,
 body {
   height: auto !important;
   min-height: 100%;
-  background: white; }
+  overflow-x: hidden;
+  background-color: white; }
 
 body > header > div,
 body > footer > div,
