--- a/content/themes/elements/sass/layout/_html.scss
+++ b/content/themes/elements/sass/layout/_html.scss
@@ -2,5 +2,7 @@ html,
 body{
   height: auto !important;
   min-height: 100%;
-  background: $white;
+  overflow-x: hidden;
+
+  background-color: $white;
 }
